--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,21 +1,88 @@
 stages:
+  # مراحل معالجة النصوص
   prepare:
     cmd: python scripts/prepare_data.py
     outs:
       - data/dataset.csv
 
   train:
-    cmd: wandb agent t39ykh89
+    # cmd: wandb agent mysaarh99-academic-journals/mlops-course-scripts/qhjm49jp
+    cmd: python scripts/train_logistic_wandb.py
     deps:
       - data/dataset.csv
       - scripts/train_logistic_wandb.py
     outs:
       - models/logistic_model_best.pkl
-      - models/vectorizer.pkl
+      - models/vectorizer_trained.pkl
 
   predict:
     cmd: python scripts/predict.py
     deps:
       - models/logistic_model_best.pkl
-      - models/vectorizer.pkl
+      - models/vectorizer_trained.pkl
       - scripts/predict.py
+
+  # مراحل معالجة CIFAR-10
+  prepare_cifar10:
+    cmd: python scripts/prepare_cifar10.py
+    outs:
+      - data/cifar10/train.npz
+      - data/cifar10/test.npz
+
+  train_cifar10:
+    cmd: python scripts/train_cifar10.py
+    deps:
+      - data/cifar10/train.npz
+      - data/cifar10/test.npz
+      - scripts/train_cifar10.py
+    outs:
+      - models/cifar10_model.keras
+
+  predict_cifar10:
+    cmd: python scripts/predict_cifar10.py
+    deps:
+      - models/cifar10_model.keras
+      - scripts/predict_cifar10.py
+      
+  train_cifar10_wandb:
+    cmd: python scripts/train_cifar10_wandb.py
+    deps:
+      - data/cifar10/train.npz
+      - data/cifar10/test.npz
+      - scripts/train_cifar10_wandb.py
+    outs:
+      - models/cifar10_model_wandb.keras
+
+  train_cifar10_mlflow:
+    cmd: python scripts/train_cifar10_mlflow.py
+    deps:
+      - data/cifar10/train.npz
+      - data/cifar10/test.npz
+      - scripts/train_cifar10_mlflow.py
+    outs:
+      - models/cifar10_model_mlflow.keras
+
+  train_cifar10_wandb_visual:
+    cmd: python scripts/train_cifar10_wandb_visual.py
+    deps:
+      - data/cifar10/train.npz
+      - data/cifar10/test.npz
+      - scripts/train_cifar10_wandb_visual.py
+    outs:
+      - models/cifar10_model_wandb_visual.keras
+
+  predict_cifar10_visual:
+    cmd: python scripts/predict_cifar10_visual.py
+    deps:
+      - models/cifar10_model_wandb_visual.keras
+      - data/cifar10/test.npz
+      - scripts/predict_cifar10_visual.py
+
+# graph TD
+#   A[prepare] --> B[train] --> C[predict]
+#   D[prepare_cifar10] --> E[train_cifar10]
+#   D --> F[train_cifar10_wandb]
+#   D --> G[train_cifar10_mlflow]
+#   D --> H[train_cifar10_wandb_visual] --> I[predict_cifar10_visual]
+#   E --> J[predict_cifar10]
+    
