--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,13 @@ snorkel==0.9.9
 SQLAlchemy==1.4.48
 torch==2.0.0
 transformers==4.28.1
+wandb==0.16.5
+joblib==1.3.2
+fastapi==0.110.0
+uvicorn==0.29.0
+tensorflow==2.15.0
+pillow
+python-multipart
 
 # Notebook
 cleanlab==2.3.1
