--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -28,24 +28,26 @@ jobs:
         pip install -r requirements.txt
         pip install dvc[all] wandb mlflow
 
-    # --- 4) إعادة تدريب النماذج باستخدام DVC ---
+    # --- 4) تسجيل الدخول إلى WandB لتتبع التجارب ---
     - name: Login to Weights & Biases
       run: wandb login ${{ secrets.WANDB_API_KEY }}
+
+    # --- 5) تشغيل خط DVC (بما في ذلك توليد dataset.csv من النسخة المصغرة) ---
 
     - name: Reproduce pipeline with DVC
       run: dvc repro
 
-    # --- 5) تسجيل الدخول إلى Docker Hub (استخدم Secrets) ---
+    # --- 6) تسجيل الدخول إلى Docker Hub ---
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-    # --- 6) بناء الصورة ---
+    # --- 7) بناء الصورة ---
     - name: Build Docker image
       run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest .
 
-    # --- 7) رفع الصورة إلى Docker Hub ---
+    # --- 8) رفع الصورة إلى Docker Hub ---
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest
