--- a/dvc.yaml
+++ b/dvc.yaml
@@ -27,61 +27,61 @@ stages:
       - scripts/predict.py
 
   # --- بيانات CIFAR-10 ---
-  prepare_cifar10:
-    cmd: python scripts/prepare_cifar10.py
-    outs:
-      - data/cifar10/train.npz
-      - data/cifar10/test.npz
+  # prepare_cifar10:
+  #   cmd: python scripts/prepare_cifar10.py
+  #   outs:
+  #     - data/cifar10/train.npz
+  #     - data/cifar10/test.npz
 
-  train_cifar10_baseline:
-    cmd: python scripts/train_cifar10.py
-    deps:
-      - data/cifar10/train.npz
-      - data/cifar10/test.npz
-      - scripts/train_cifar10.py
-    outs:
-      - models/cifar10_model.keras
+  # train_cifar10_baseline:
+  #   cmd: python scripts/train_cifar10.py
+  #   deps:
+  #     - data/cifar10/train.npz
+  #     - data/cifar10/test.npz
+  #     - scripts/train_cifar10.py
+  #   outs:
+  #     - models/cifar10_model.keras
 
-  train_cifar10_wandb:
-    cmd: python scripts/train_cifar10_wandb.py
-    deps:
-      - data/cifar10/train.npz
-      - data/cifar10/test.npz
-      - scripts/train_cifar10_wandb.py
-    outs:
-      - models/cifar10_model_wandb.keras
+  # train_cifar10_wandb:
+  #   cmd: python scripts/train_cifar10_wandb.py
+  #   deps:
+  #     - data/cifar10/train.npz
+  #     - data/cifar10/test.npz
+  #     - scripts/train_cifar10_wandb.py
+  #   outs:
+  #     - models/cifar10_model_wandb.keras
 
-  train_cifar10_mlflow:
-    cmd: python scripts/train_cifar10_mlflow.py
-    deps:
-      - data/cifar10/train.npz
-      - data/cifar10/test.npz
-      - scripts/train_cifar10_mlflow.py
-    outs:
-      - models/cifar10_model_mlflow.keras
+  # train_cifar10_mlflow:
+  #   cmd: python scripts/train_cifar10_mlflow.py
+  #   deps:
+  #     - data/cifar10/train.npz
+  #     - data/cifar10/test.npz
+  #     - scripts/train_cifar10_mlflow.py
+  #   outs:
+  #     - models/cifar10_model_mlflow.keras
 
-  train_cifar10_visual:
-    cmd: python scripts/train_cifar10_wandb_visual.py
-    deps:
-      - data/cifar10/train.npz
-      - data/cifar10/test.npz
-      - scripts/train_cifar10_wandb_visual.py
-    outs:
-      - models/cifar10_model_wandb_visual.keras
+  # train_cifar10_visual:
+  #   cmd: python scripts/train_cifar10_wandb_visual.py
+  #   deps:
+  #     - data/cifar10/train.npz
+  #     - data/cifar10/test.npz
+  #     - scripts/train_cifar10_wandb_visual.py
+  #   outs:
+  #     - models/cifar10_model_wandb_visual.keras
 
-  # --- التنبؤ بعد التدريب (صور) ---
-  predict_cifar10_baseline:
-    cmd: python scripts/predict_cifar10.py
-    deps:
-      - models/cifar10_model.keras
-      - scripts/predict_cifar10.py
+  # # --- التنبؤ بعد التدريب (صور) ---
+  # predict_cifar10_baseline:
+  #   cmd: python scripts/predict_cifar10.py
+  #   deps:
+  #     - models/cifar10_model.keras
+  #     - scripts/predict_cifar10.py
 
-  predict_cifar10_visual:
-    cmd: python scripts/predict_cifar10_visual.py
-    deps:
-      - models/cifar10_model_wandb_visual.keras
-      - data/cifar10/test.npz
-      - scripts/predict_cifar10_visual.py
+  # predict_cifar10_visual:
+  #   cmd: python scripts/predict_cifar10_visual.py
+  #   deps:
+  #     - models/cifar10_model_wandb_visual.keras
+  #     - data/cifar10/test.npz
+  #     - scripts/predict_cifar10_visual.py
 
 # graph TD
 #   A[prepare] --> B[train] --> C[predict]
