--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -21,7 +21,21 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements-ci.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     # --- 3) تثبيت المتطلبات ---
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements-ci.txt
+
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
