--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,31 @@
-# Default
-hyperopt==0.2.7
-ipywidgets>=8
-matplotlib==3.7.1
-mlflow==2.3.1
-nltk==3.8.1
-numpy==1.24.3
-numpyencoder==0.3.0
-pandas==2.0.1
-pretty-errors==1.2.25
-ray[air]==2.6.0
+# ========== Core Machine Learning ==========
 scikit-learn==1.2.2
-snorkel==0.9.9
-SQLAlchemy==1.4.48
-torch==2.0.0
-transformers==4.28.1
-wandb==0.16.5
-joblib==1.3.2
-uvicorn==0.29.0
 tensorflow==2.15.0
-pillow
-python-multipart
-aiofiles>=23.1.0
+torch==2.0.0
+
+# ========== Experiment Tracking & Logging ==========
+mlflow==2.3.1
+wandb==0.16.5
 loguru==0.7.2
 
-# Notebook
-cleanlab==2.3.1
-jupyterlab==3.6.3
-lime==0.2.0.1
-seaborn==0.12.2
-wordcloud==1.9.2
+# ========== Data Handling & Utilities ==========
+numpy==1.24.3
+pandas==2.0.1
+joblib==1.3.2
+nltk==3.8.1  # Optional: For tokenization if using text features
 
-# Documentation
-mkdocs==1.4.2
-mkdocstrings==0.21.2
-mkdocstrings[python]>=0.18
-
-# Styling
-black==23.3.0
-flake8==6.0.0
-Flake8-pyproject==1.2.3
-isort==5.12.0
-pyupgrade==3.3.2
-
-# Testing
-great-expectations==0.16.5
-pytest==7.3.1
-pytest-cov==4.0.0
-
-# Development
+# ========== API & Web Serving ==========
 fastapi==0.95.2
-pre-commit==3.2.2
-typer==0.9.0
+uvicorn==0.22.0
+python-multipart>=0.0.6,<0.0.7
+aiofiles>=23.1.0,<24.0.0
+pillow>=9.0.0,<10.0.0
 
-# Deployment
-anyscale==0.5.131
+#  كل ما تحتاجه:
+# Core ML: تدربت على نماذج scikit-learn, tensorflow, و torch.
+
+# Experiment Tracking: استخدمت wandb فعليًا، ووجود mlflow مفيد في حال رغبت بتفعيله لاحقًا.
+
+# Data Handling: numpy, pandas, joblib, و nltk كلها مستخدمة في النماذج النصية والرقمية.
+
+# Serving: استخدمت FastAPI, uvicorn, وملفات/صور في predict-image.
