--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -11,25 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # --- 1) سحب الكود ---
+    #  سحب الكود ---
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --- 2) إعداد Python ---
+    # إعداد Python ---
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
+ # إعداد cache pip ---
     - name: Cache pip
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements-ci.txt') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    # --- 3) تثبيت المتطلبات ---
+    #  تثبيت المتطلبات ---
     # - name: Install dependencies
     #   run: |
     #     python -m pip install --upgrade pip
@@ -42,29 +43,34 @@ jobs:
         pip install -r requirements.txt
         pip install dvc[all] wandb mlflow
 
-    # --- 4) تسجيل الدخول إلى WandB لتتبع التجارب ---
+    #  تسجيل الدخول إلى WandB لتتبع التجارب ---
     - name: Login to Weights & Biases
       run: wandb login ${{ secrets.WANDB_API_KEY }}
 
-    # - name: Generate dataset (sample) before pipeline
-    #   run: python scripts/prepare_data.py
-
-    # --- 5) تشغيل خط DVC (بما في ذلك توليد dataset.csv من النسخة المصغرة) ---
-
+    #  تشغيل خط DVC (توليد البيانات والتدريب) ---
     - name: Reproduce pipeline with DVC
       run: dvc repro
 
-    # --- 6) تسجيل الدخول إلى Docker Hub ---
+    #  تسجيل الدخول إلى Docker Hub ---
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-    # --- 7) بناء الصورة ---
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest .
+    # --- إنشاء tag جديد باستخدام التاريخ والوقت ---
+    - name: Generate Docker image tag
+      id: tagger
+      run: echo "tag=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
 
-    # --- 8) رفع الصورة إلى Docker Hub ---
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest
+    #  بناء الصورة ---
+    - name: Build Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest \
+                     -t ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:${{ steps.tagger.outputs.tag }} .
+
+    #  رفع الصورة إلى Docker Hub ---
+    - name: Push Docker images
+      run: |
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:latest
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mlops-api:${{ steps.tagger.outputs.tag }}
