--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ torch==2.0.0
 mlflow==2.3.1
 wandb==0.16.5
 loguru==0.7.2
+dvc[all]
 
 # ========== Data Handling & Utilities ==========
 numpy==1.24.3
