--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mlflow==2.3.1
 wandb==0.16.5
 loguru==0.7.2
 dvc[all]
+dvc-ssh>=2.23.0
 
 # ========== Data Handling & Utilities ==========
 numpy==1.24.3
