--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -44,7 +44,17 @@ jobs:
           echo "=== Installing Python dependencies ==="
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install dvc[all] wandb mlflow
+          pip install dvc-ssh
+
+      - name: 🔑 Add SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DVC_SSH_KEY }}
+            
+      - name: 🧩 Known hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H 31.44.0.199 >> ~/.ssh/known_hosts
 
       # =======================
       # 5️⃣ تسجيل الدخول إلى W&B
