--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,13 @@ joblib==1.3.2
 
 # ========== API & Web Serving ==========
 fastapi==0.95.2
-uvicorn==0.22.0
+# uvicorn==0.22.0
 python-multipart>=0.0.6,<0.0.7
 aiofiles>=23.1.0,<24.0.0
 pillow>=9.0.0,<10.0.0
+
+pydantic<2
+uvicorn[standard]==0.22.0
 
 #  كل ما تحتاجه:
 # Core ML: تدربت على نماذج scikit-learn, tensorflow, و torch.
