--- a/dvc.yaml
+++ b/dvc.yaml
@@ -62,12 +62,12 @@ stages:
     outs:
       - models/cifar10_model_mlflow.keras
 
-  train_cifar10_visual:
+  train_cifar10_wandb_visual:
     cmd: python scripts/train_cifar10_wandb_visual.py
     deps:
+      - scripts/train_cifar10_wandb_visual.py
       - data/cifar10/train.npz
       - data/cifar10/test.npz
-      - scripts/train_cifar10_wandb_visual.py
     outs:
       - models/cifar10_model_wandb_visual.keras
 
