--- a/models/.gitignore
+++ b/models/.gitignore
@@ -1,2 +1,6 @@
 /logistic_model_best.pkl
 /vectorizer.pkl
+/cifar10_model.keras
+/cifar10_model_wandb.keras
+/cifar10_model_mlflow.keras
+/cifar10_model_wandb_visual.keras
